# httpencode

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  coverage.sh
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  rust.yml
benches/: benches.rs
src/: errors.rs  header.rs  lib.rs  method.rs  status.rs  uri.rs  util.rs  version.rs  writable.rs
src/integrations/: httparse.rs  mod.rs
tests/: encode-test.rs
