[package]
name = "httpencode"
version = "0.1.0"
authors = ["Phantomical <phantom@lynches.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = [ "bytes/std" ]
default = [ "std", "httparse" ]

# Disable outputting reason phrases by default
no-reason-phrase = []

[dependencies]
bytes = { version = "0.5", default-features=false }
memchr = "2.3"

# Optional trait integrations for other crates
httparse = { version="1.3", optional=true }

[build-dependencies]
autocfg = "1.0"


