[package]
name = "httpencode"
version = "0.1.0"
authors = ["Phantomical"]
edition = "2018"
license = "Apache-2.0 OR MIT"
exclude = ["/coverage.sh", "/.github/*"]

[features]
std = [ "bytes/std", "memchr/std" ]
default = [ "std" ]

# The 'no-reason-phrase' feature prevents this crate from including the
# default reason phrase within every HTTP status written out. Enabling
# this feature means the produced responses will be smaller and it also
# allows removing the lookup table to save some binary size.
no-reason-phrase = []

[dependencies]
bytes = { version = "0.5", default-features=false }
memchr = { version = "2.3", default-features=false }

# Optional trait integrations for other crates
httparse = { version="1.3", optional=true }

[build-dependencies]
autocfg = "1.0"


